idea/testData/checker/recovery/namelessToplevelDeclarations.fir.kt
package<EOLError descr="Package name must be a '.'-separated identifier list placed on a single line"></EOLError>

<error descr="[FUNCTION_DECLARATION_WITH_NO_NAME] Function declaration must have a name">fun ()</error> {

}

val<error descr="Expecting property name or receiver type"> </error>: Int = 1


class<error descr="Name expected"> </error>{

}

interface<error descr="Name expected"> </error>{

}

object<error descr="Name expected"> </error>{

}

<error descr="[UPPER_BOUND_VIOLATED] Type argument is not within its bounds: should be subtype of 'kotlin/Enum<<no name provided>>'">enum class<error descr="Name expected"> </error>{}</error>

annotation class<error descr="Name expected"> </error>{}
